Fixed h2 and h3 alignment

--- a/css/style.css
+++ b/css/style.css
@@ -46,20 +46,24 @@ div #underheader {
 }
 
 h2 {
-    position: relative; 
+    position: relative;
+    text-align: right;
     color: #8bd8ab;
     background-color: #282a36;
-    width: 300px;
-    border-radius: 5px;
+    width: 30%;
+    border-top-right-radius: 5px;
+    border-bottom-right-radius: 5px;
     padding-left: 30px;
 }
 
 h3 {
     position: relative;
     padding-left: 30px;
+    text-align: right;
     background-color: #282a36;
-    width: 250px;
-    border-radius: 5px;
+    width: 30%;
+    border-top-right-radius: 5px;
+    border-bottom-right-radius: 5px;
 }
 
 a:hover {
